issue #44 - add endpoint for sending IM
